[gd_scene load_steps=16 format=3 uid="uid://b6il8d5ok5ax4"]

[ext_resource type="Script" path="res://Options_Scene.gd" id="1_8gq7s"]
[ext_resource type="Texture2D" uid="uid://chr4rry887ix2" path="res://Single_or_multiplayer.png" id="2_2dx5c"]
[ext_resource type="Texture2D" uid="uid://ci50sh0dj8nhp" path="res://Selected_1_Player.png" id="2_axyfp"]
[ext_resource type="Texture2D" uid="uid://dis22x5wq1atj" path="res://Unselected_2_Players.png" id="3_s8tt5"]
[ext_resource type="Texture2D" uid="uid://k8lq8kitd7b3" path="res://Back_Button.png" id="4_8vaa4"]
[ext_resource type="Texture2D" uid="uid://bbhpxr55ocqj1" path="res://Next_Button.png" id="5_eaqws"]
[ext_resource type="Texture2D" uid="uid://sk6f4dpp5dku" path="res://Hard_Mode_Button.png" id="9_8h18k"]
[ext_resource type="Texture2D" uid="uid://btisgpk40omq6" path="res://Normal_Mode_Button.png" id="10_bu6h8"]
[ext_resource type="Texture2D" uid="uid://d1wjafcw5b2nx" path="res://WASD_and_arrows_selected.png" id="11_lnohr"]
[ext_resource type="Texture2D" uid="uid://brdfhsclopupm" path="res://Cursor_unselected.png" id="11_s2pts"]
[ext_resource type="Texture2D" uid="uid://b1glcseshapst" path="res://Selected_Unmute.png" id="11_yub4o"]
[ext_resource type="Texture2D" uid="uid://bn334j18lycvm" path="res://Unselected_Mute.png" id="12_grnkl"]
[ext_resource type="Texture2D" uid="uid://ccx58oo06r18u" path="res://increase_goal_arrow_button.png" id="13_b1gf8"]
[ext_resource type="Texture2D" uid="uid://g1rneqptuyaq" path="res://goal_on_0_arrow_button.png" id="14_fpj22"]
[ext_resource type="Texture2D" uid="uid://bnw1myh3euqpk" path="res://infinite_goal_background.png" id="15_fpr7l"]

[node name="Options_Scene" type="Node"]
script = ExtResource("1_8gq7s")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 8662.0
offset_bottom = 4872.0
scale = Vector2(0.267, 0.267)
texture = ExtResource("2_2dx5c")

[node name="Single_Player_Button" type="Button" parent="."]
offset_left = 100.0
offset_top = 756.0
offset_right = 1260.0
offset_bottom = 962.0
scale = Vector2(1.508, 1.508)
icon = ExtResource("2_axyfp")
flat = true

[node name="Multiplayer_Button" type="Button" parent="."]
offset_left = 564.0
offset_top = 1052.0
offset_right = 1724.0
offset_bottom = 1218.0
scale = Vector2(1.5, 1.5)
icon = ExtResource("3_s8tt5")
flat = true

[node name="Back_Button" type="Button" parent="."]
z_index = 10
offset_left = 2.0
offset_top = -18.0
offset_right = 510.0
offset_bottom = 270.0
scale = Vector2(0.8, 0.8)
icon = ExtResource("4_8vaa4")
flat = true

[node name="Next_Button" type="Button" parent="."]
z_index = 10
offset_left = 1942.0
offset_top = 6.0
offset_right = 3102.0
offset_bottom = 662.0
scale = Vector2(0.3, 0.3)
icon = ExtResource("5_eaqws")
flat = true

[node name="Hard_Mode_Button" type="Button" parent="."]
offset_left = 414.0
offset_top = 978.0
offset_right = 2742.0
offset_bottom = 1478.0
scale = Vector2(0.6, 0.6)
icon = ExtResource("9_8h18k")

[node name="Normal_Mode_Button" type="Button" parent="."]
offset_left = 410.0
offset_top = 672.0
offset_right = 2738.0
offset_bottom = 1172.0
scale = Vector2(0.6, 0.6)
icon = ExtResource("10_bu6h8")
flat = true

[node name="Unmute_Button" type="Button" parent="."]
offset_left = 82.0
offset_top = 662.0
offset_right = 1134.0
offset_bottom = 1434.0
scale = Vector2(0.8, 0.8)
icon = ExtResource("11_yub4o")
flat = true

[node name="Mute_Button" type="Button" parent="."]
offset_left = 1272.0
offset_top = 664.0
offset_right = 2692.0
offset_bottom = 1596.0
scale = Vector2(0.66, 0.66)
icon = ExtResource("12_grnkl")
flat = true

[node name="Cursor_Button" type="Button" parent="."]
offset_left = 1500.0
offset_top = 800.0
offset_right = 2222.0
offset_bottom = 1315.0
scale = Vector2(0.8, 0.8)
icon = ExtResource("11_s2pts")
flat = true

[node name="WASD_and_arrows_Button" type="Button" parent="."]
offset_left = 200.0
offset_top = 860.0
offset_right = 1268.0
offset_bottom = 1251.0
scale = Vector2(0.8, 0.8)
icon = ExtResource("11_lnohr")
flat = true

[node name="Increase_goal_Button" type="Button" parent="."]
offset_left = 1690.0
offset_top = 671.0
offset_right = 2876.0
offset_bottom = 1863.0
scale = Vector2(0.5, 0.5)
icon = ExtResource("13_b1gf8")
flat = true

[node name="Decrease_goal_Button" type="Button" parent="."]
offset_left = 28.0
offset_top = 676.0
offset_right = 1214.0
offset_bottom = 1868.0
scale = Vector2(0.5, 0.5)
icon = ExtResource("14_fpj22")
flat = true

[node name="Goal_Background_Sprite2D" type="Sprite2D" parent="."]
position = Vector2(1152, 970)
scale = Vector2(0.5, 0.5)
texture = ExtResource("15_fpr7l")

[node name="Goal_Label" type="Label" parent="."]
offset_left = 1090.0
offset_top = 816.0
offset_right = 1364.0
offset_bottom = 839.0
scale = Vector2(13, 13)
theme_override_colors/font_color = Color(0, 0, 0, 1)

[connection signal="pressed" from="Single_Player_Button" to="." method="_on_single_player_button_pressed"]
[connection signal="pressed" from="Multiplayer_Button" to="." method="_on_multiplayer_button_pressed"]
[connection signal="pressed" from="Back_Button" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="Next_Button" to="." method="_on_next_button_pressed"]
[connection signal="pressed" from="Hard_Mode_Button" to="." method="_on_hard_mode_button_pressed"]
[connection signal="pressed" from="Normal_Mode_Button" to="." method="_on_normal_mode_button_pressed"]
[connection signal="pressed" from="Unmute_Button" to="." method="_on_unmute_button_pressed"]
[connection signal="pressed" from="Mute_Button" to="." method="_on_mute_button_pressed"]
[connection signal="pressed" from="Cursor_Button" to="." method="_on_cursor_button_pressed"]
[connection signal="pressed" from="WASD_and_arrows_Button" to="." method="_on_wasd_and_arrows_button_pressed"]
[connection signal="pressed" from="Increase_goal_Button" to="." method="_on_increase_goal_button_pressed"]
[connection signal="pressed" from="Decrease_goal_Button" to="." method="_on_decrease_goal_button_pressed"]
